--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3,15 +3,29 @@ body {
   font-family: Helvetica;
 }
 
+.white {
+  color: white;
+}
+
 .top {
   background-image: url("the-flatiron-building.png");
 }
 
-h1.top {
+h1 {
   font-size: 70px;
   font-weight: bold;
 }
 
-.white {
-  color: white;
+h2 {
+  font-size: 32px;
+  font-weight: bold;
+}
+
+h3 {
+  font-size: 23px;
+  font-weight: bold;
+}
+
+p {
+  font-size: 14px;
 }
