--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -7,23 +7,23 @@ body {
   color: white;
 }
 
-.top {
-  background-image: url("the-flatiron-building.png");
+#flatiron {
+  background-image: url("https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png");
+}
+.bold {
+  font-weight: bold;
 }
 
 h1 {
   font-size: 70px;
-  font-weight: bold;
 }
 
 h2 {
   font-size: 32px;
-  font-weight: bold;
 }
 
 h3 {
   font-size: 23px;
-  font-weight: bold;
 }
 
 p {
