--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3,12 +3,21 @@ body {
   font-family: Helvetica;
 }
 
+a {
+  color: white;
+}
+
 .white {
   color: white;
 }
 
+.nav {
+  font-size: 18px;
+  color: white;
+}
+
 #flatiron {
-  background-image: url("https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png");
+  background-image: url("/resources/images/the-flatiron-building.png");
 }
 .bold {
   font-weight: bold;
@@ -28,4 +37,10 @@ h3 {
 
 p {
   font-size: 14px;
+}
+
+#copyright {
+  font-size: 11px;
+  background-color: dimgray;
+  text-align: left;
 }
